[package]
name = "celeste_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-tables = "0.3.1"
tempfile = "3"
celeste_visualizer = { path="../celeste_visualizer" }
celeste_savefile_db = { path="../celeste_savefile_db" }
reqwest = "0.11.24"
zip = "2.1.3"


[dependencies.serenity]
version = "0.11.5"
features = ["framework", "standard_framework", "rustls_backend", "client", "gateway", "model", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.celeste_save_data_rs]
path="../celeste_save_data_rs"
