[package]
name = "celeste_save_data_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version="0.28.2", features=["serialize"] }
serde = { version="1.0.160", features = [ "derive" ] }
serde_yaml = "0.9"
