[package]
name = "celeste_savefile_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version="1.0.160", features = [ "derive" ] }
futures = "0.3"
