[package]
name = "celeste_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celeste_save_data_rs = { path="../celeste_save_data_rs" }
svg_vis = { git="https://github.com/niuez/svg_vis" }
resvg = "0.32.0"
